--- a/report/src/main/resources/templates/employee/T_previewTable.html
+++ b/report/src/main/resources/templates/employee/T_previewTable.html
@@ -3,110 +3,109 @@
 <!DOCTYPE HTML>
 <html>
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="renderer" content="webkit|ie-comp|ie-stand">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<link rel="Bookmark" href="favicon.ico">
-		<link rel="Shortcut Icon" href="favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="static/h-ui/css/H-ui.min.css" />
-		<link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/H-ui.admin.css" />
-		<link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css" />
-		<link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
-		<link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
-		<!--/meta 作为公共模版分离出去-->
-		<title>灵活报表系统</title>
-		<meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-		<meta name="description" content="H-ui.admin v3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
-		<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-		<style>
-			#changesize {
-				font-size: xx-large;
-			}
-			#menu-product {
-				display: inline;
-			}
-		</style>
-	</head>
+<head>
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <link rel="Bookmark" href="favicon.ico">
+    <link rel="Shortcut Icon" href="favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="static/h-ui/css/H-ui.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/H-ui.admin.css"/>
+    <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css"/>
+    <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin"/>
+    <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css"/>
+    <link rel="stylesheet" href="/layui/css/layui.css" media="all">
+    <!--/meta 作为公共模版分离出去-->
+    <title>灵活报表系统</title>
+    <meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
+    <meta name="description" content="H-ui.admin v3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
+    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <style>
+        #changesize {
+            font-size: xx-large;
+        }
 
-	<body>
-		<!--_header 作为公共模版分离出去-->
-		<div class="headerpage"></div>
-		<div class="dislpayArrow hidden-xs">
-			<a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a>
-		</div>
-		<!--/_menu 作为公共模版分离出去-->
-		<section class="Hui-article-box">
-			<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 查看报表信息<span class="c-gray en">&gt;</span><span th:text="${reportInfo.reportName}"></span>
-				<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a>
-			</nav>
-			<div class="Hui-article">
-				<article class="cl pd-20">
-					<input type="hidden" id="reportId" th:value="${reportInfo.reportId}">
-					<div id="creatTable">
+        #menu-product {
+            display: inline;
+        }
+    </style>
+</head>
 
-					</div>
+<body>
+<!--_header 作为公共模版分离出去-->
+<div class="headerpage"></div>
+<div class="dislpayArrow hidden-xs">
+    <a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a>
+</div>
+<!--/_menu 作为公共模版分离出去-->
+<section class="Hui-article-box">
+    <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 查看报表信息<span
+            class="c-gray en">&gt;</span><span th:text="${reportInfo.reportName}"></span>
+        <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px"
+           href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a>
+    </nav>
+    <div class="Hui-article">
+        <article class="cl pd-20">
+            <input type="hidden" id="reportId" th:value="${reportInfo.reportId}">
+            <!--动态生成表格-->
+            <table class="layui-hide" id="preview"></table>
+        </article>
 
-				</article>
+    </div>
+</section>
 
-			</div>
-		</section>
+<!--_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
+<script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>
+<script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.page.js"></script>
+<!--/_footer /作为公共模版分离出去-->
 
-		<!--_footer 作为公共模版分离出去-->
-		<script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
-		<script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
-		<script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>
-		<script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.page.js"></script>
-		<!--/_footer /作为公共模版分离出去-->
-
-		<!--请在下方写此页面业务相关的脚本-->
-		<script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
-		<script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
-		<script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
-		<script type="text/javascript">
-            var reportId = $("#reportId").val();
-            console.log(reportId);
-            $.ajax({
-                type: "POST",
-                url: "/leaderShowFinalReport",
-                data: {"reportId":reportId},
-                success: function(data) {
-                    console.log(data);
-                    if (data.colInfo == null) return;
-                    var table = $("<table class='table table-border table-bordered table-hover table-bg table-sort'>");
-                    table.appendTo($("#creatTable"));//将table显示在id为createtable的div中
-                    var trHeader = $("<tr class='text-c'></tr>");
-                    trHeader.appendTo(table);//将trHeader显示在id为table中
-                    for (var i=0;i<data.colInfo.length;i++) {//遍历表头
-                        var td = $("<td  class='text-c' style='background-color: #9dc7e7;font-size: 16px;font-weight:bold'>" + data.colInfo[i] + "</td>");//data.columns[j].title:"员工编号"
-                        td.appendTo(trHeader);
-                    }
-                    if (data.finalreport == null) return;
-                    for (var i = 0; i < data.finalreport.length; i++) {//
-                        var tr = $("<tr  class='text-c'></tr>");//001
-                        tr.appendTo(table);
-                        var str = data.finalreport[i].split("!,");
-                        for (var j = 0; j < data.colInfo.length; j++) {
-                            if (str[j]=="null"){
-                                str[j] ="";
-							}
-                            var td = $("<td  class='text-c'>" + str[j] + "</td>");
-                            td.appendTo(tr);
-                        }
-                    }
-                    $("#createtable").append("</table>");
+<!--请在下方写此页面业务相关的脚本-->
+<script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
+<script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
+<script src="/layui/layui.js" charset="utf-8"></script>
+<script type="text/javascript">
+    layui.use('table', function () {
+        var reportId = $("#reportId").val();
+        var preview = null;
+        var colNames = [];
+        var table = layui.table;
+        //动态获取列信息
+        $.ajax({
+            type: "post",
+            url: "/getColNames",
+            data: {"reportId": reportId},
+            success: function (data) {
+                for (var i = 0; i < data.length; i++) {
+                    colNames[i] = {field: 'col' + data[i].colLoc, title: data[i].colName};
                 }
-            });
-		</script>
-		<script>
-		    $(function(){
-		      
-		        $(".headerpage").load("/Ttop");
-		       
-		    });
-		</script>
-	</body>
+
+                preview = table.render({
+                    elem: '#preview',
+                    // cellMinWidth: 100,
+                    method: 'post'
+                    , url: '/leaderShowFinalReport?reportId=' + reportId // 数据接口
+                    , page: true // 开启分页
+                    , cols: [colNames]
+                });
+                preview.reload();
+            }
+        });
+
+    });
+</script>
+<script>
+    $(function () {
+
+        $(".headerpage").load("/Ttop");
+
+    });
+</script>
+</body>
 
 </html>
