--- a/report/src/main/resources/templates/employee/Tableinfo.html
+++ b/report/src/main/resources/templates/employee/Tableinfo.html
@@ -53,7 +53,7 @@
 					</div>
 				</form>
 				<div align="center">
-					<input  id="submit" class="btn btn-primary radius" style="margin-top: 10Px; " value="上传" />
+					<input  id="submit" class="btn btn-primary radius" style="margin-top: 10Px; " value="提交" />
 				</div>
 			</article>
 
