--- a/report/src/main/resources/templates/employee/T_top.html
+++ b/report/src/main/resources/templates/employee/T_top.html
@@ -3,10 +3,10 @@
 <header class="navbar-wrapper">
     <div class="navbar navbar-fixed-top">
         <div class="container-fluid cl">
-            <a class="logo navbar-logo f-l mr-10 hidden-xs Hui-iconfont" href="/aboutHui.shtml"
-               id="changesize">&#xe704; </a>
-            <a class="logo navbar-logo f-l mr-10 hidden-xs " href="/aboutHui.shtml"
-               style="font-size: larger;">灵活报表系统</a>
+            <label class="logo navbar-logo f-l mr-10 hidden-xs Hui-iconfont"
+               id="changesize">&#xe704; </label>
+            <label class="logo navbar-logo f-l mr-10 hidden-xs "
+                   style="font-size: larger;">灵活报表系统</label>
             <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
             <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
                 <ul class="cl">
@@ -18,10 +18,10 @@
                                                                                 style="font-size:18px">&#xe62a;</i></a>
                         <ul class="dropDown-menu menu radius box-shadow">
                             <li>
-                                <a href="javascript:;" data-val="default" title="默认（黑色）">默认（黑色）</a>
+                                <a href="javascript:;" data-val="default" title="默认（蓝色）">默认（蓝色）</a>
                             </li>
                             <li>
-                                <a href="javascript:;" data-val="blue" title="蓝色">蓝色</a>
+                                <a href="javascript:;" data-val="black" title="黑色">黑色</a>
                             </li>
                             <li>
                                 <a href="javascript:;" data-val="green" title="绿色">绿色</a>
@@ -48,20 +48,14 @@
 <aside class="Hui-aside">
     <div class="menu_dropdown bk_2">
         <dl id="menu-article">
-            <dt><i class="Hui-iconfont">&#xe616;</i> 填写表单信息<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-            <dd>
-                <ul>
-                    <li class="current">
-                        <a href="/onlineFillIndex" class="show Hui-iconfont">&#xe692; 在线填写</a>
-                    </li>
-                    <li>
-                        <a href="/successIndex">&#xe692; 离线上传</a>
-                    </li>
-                </ul>
-            </dd>
+            <dt><i class="Hui-iconfont">&#xe616;</i><a href="/successIndex"> 填写报表</a></dt>
         </dl>
         <dl id="menu-picture">
-            <dt><i class="Hui-iconfont current">&#xe613;</i> 查看报表信息</dt>
+            <dt>
+                <i class="Hui-iconfont">&#xe620;</i>
+                <a href="#" title="查看报表信息">查看报表信息</a>
+                <i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
+            </dt>
             <dd>
                 <ul th:each="reportInfo:${reportLists}">
                     <li th:id="${reportInfo.reportId}">
