--- a/report/src/main/resources/templates/leader/C_previewTable.html
+++ b/report/src/main/resources/templates/leader/C_previewTable.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
 		<link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
+		<link rel="stylesheet" href="/layui/css/layui.css"  media="all">
 		<!--/meta 作为公共模版分离出去-->
 		<title>灵活报表系统</title>
 		<meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
@@ -47,9 +48,8 @@
 			<div class="Hui-article">
 				<article class="cl pd-20">
 					<input type="hidden" id="reportId" th:value="${reportInfo.reportId}">
-					<div id="creatTable">
-
-					</div>
+					<!--动态生成表格-->
+					<table class="layui-hide" id="preview"></table>
 				</article>
 
 			</div>
@@ -66,39 +66,34 @@
 		<script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
 		<script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 		<script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
+		<script src="/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript">
-            var reportId = $("#reportId").val();
-            console.log(reportId);
-            $.ajax({
-                type: "POST",
-                url: "/leaderShowFinalReport",
-                data: {"reportId":reportId},
-                success: function(data) {
-                    console.log(data);
-                    if (data.colInfo == null) return;
-                    var table = $("<table class='table table-border table-bordered table-hover table-bg table-sort'>");
-                    table.appendTo($("#creatTable"));//将table显示在id为createtable的div中
-                    var trHeader = $("<tr class='text-c'></tr>");
-                    trHeader.appendTo(table);//将trHeader显示在id为table中
-                    for (var i=0;i<data.colInfo.length;i++) {//遍历表头
-                        var td = $("<td  class='text-c' style='background-color: #9dc7e7;font-size: 16px;font-weight:bold'>" + data.colInfo[i] + "</td>");//data.columns[j].title:"员工编号"
-                        td.appendTo(trHeader);
-                    }
-                    if (data.finalreport == null) return;
-                    for (var i = 0; i < data.finalreport.length; i++) {//
-                        var tr = $("<tr  class='text-c'></tr>");//001
-                        tr.appendTo(table);
-                        var str = data.finalreport[i].split("!,");
-                        for (var j = 0; j < data.colInfo.length; j++) {
-							if (str[j] == "null"){
-							    str[j] = "";
-							}
-                            var td = $("<td  class='text-c'>" + str[j] + "</td>");
-                            td.appendTo(tr);
+            layui.use('table', function(){
+                var reportId = $("#reportId").val();
+                var colNames = [];
+                var table = layui.table;
+                var preview = null;
+                //动态获取列信息
+                $.ajax({
+                    type:"post",
+                    url:"/getColNames",
+                    data:{"reportId":reportId},
+                    success:function (data) {
+                        for (var i=0;i<data.length;i++){
+                            colNames[i] ={field:'col'+data[i].colLoc, title:data[i].colName};
                         }
+                        preview = null;
+                        preview = table.render({
+                            elem : '#preview',
+                            // cellMinWidth: 100,
+                            method : 'post'
+                            ,url : '/leaderShowFinalReport?reportId='+reportId // 数据接口
+                            ,page : true // 开启分页
+                            ,cols : [colNames]
+                        });
+                        preview.reload();
                     }
-                    $("#createtable").append("</table>");
-                }
+                });
             });
 		</script>
 		<script>
